// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Radio should render correctly 1`] = `
<styled.div
  disabled={false}
  error={false}
  hideLabel={false}
>
  <p
    className="radio__label"
  >
    Radio Label
  </p>
  <div
    className="radio__item"
    key="frau"
  >
    <input
      checked={false}
      disabled={false}
      id="frau"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="frau"
    />
    <label
      htmlFor="frau"
    >
      <span
        className="radio__custom-icon "
      />
      Frau
    </label>
  </div>
  <div
    className="radio__item"
    key="herr"
  >
    <input
      checked={false}
      disabled={false}
      id="herr"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="herr"
    />
    <label
      htmlFor="herr"
    >
      <span
        className="radio__custom-icon "
      />
      Herr
    </label>
  </div>
  <div
    className="radio__item"
    key="divers"
  >
    <input
      checked={false}
      disabled={false}
      id="divers"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="divers"
    />
    <label
      htmlFor="divers"
    >
      <span
        className="radio__custom-icon "
      />
      Divers
    </label>
  </div>
</styled.div>
`;

exports[`Radio Radio with default value should render correctly 1`] = `
<styled.div
  disabled={false}
  error={false}
  hideLabel={true}
>
  <p
    className="radio__label"
  >
    Radio Label
  </p>
  <div
    className="radio__item"
    key="frau"
  >
    <input
      checked={true}
      disabled={false}
      id="frau"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="frau"
    />
    <label
      htmlFor="frau"
    >
      <span
        className="radio__custom-icon checked"
      />
      Frau
    </label>
  </div>
  <div
    className="radio__item"
    key="herr"
  >
    <input
      checked={false}
      disabled={false}
      id="herr"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="herr"
    />
    <label
      htmlFor="herr"
    >
      <span
        className="radio__custom-icon "
      />
      Herr
    </label>
  </div>
  <div
    className="radio__item"
    key="divers"
  >
    <input
      checked={false}
      disabled={false}
      id="divers"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="divers"
    />
    <label
      htmlFor="divers"
    >
      <span
        className="radio__custom-icon "
      />
      Divers
    </label>
  </div>
</styled.div>
`;

exports[`Radio Radio without label should render correctly 1`] = `
<styled.div
  disabled={false}
  error={false}
  hideLabel={true}
>
  <p
    className="radio__label"
  >
    Radio Label
  </p>
  <div
    className="radio__item"
    key="frau"
  >
    <input
      checked={false}
      disabled={false}
      id="frau"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="frau"
    />
    <label
      htmlFor="frau"
    >
      <span
        className="radio__custom-icon "
      />
      Frau
    </label>
  </div>
  <div
    className="radio__item"
    key="herr"
  >
    <input
      checked={false}
      disabled={false}
      id="herr"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="herr"
    />
    <label
      htmlFor="herr"
    >
      <span
        className="radio__custom-icon "
      />
      Herr
    </label>
  </div>
  <div
    className="radio__item"
    key="divers"
  >
    <input
      checked={false}
      disabled={false}
      id="divers"
      name="1"
      onChange={[Function]}
      required={false}
      type="radio"
      value="divers"
    />
    <label
      htmlFor="divers"
    >
      <span
        className="radio__custom-icon "
      />
      Divers
    </label>
  </div>
</styled.div>
`;
